# 3_sempro

./: .gitignore  README.md  positions_test1.txt
DatabaseRosFinal/: UR5_database.sql  backupfunktions.txt
DatabaseRosFinal/cppcon/: CMakeLists.txt  package.xml
JDBCSoftwareGUI/: build.xml
JDBCSoftwareGUI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
JDBCsoftware/: build.xml
JDBCsoftware/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
MySqlROS/devel/: .catkin  .rosinstall  setup.sh
MySqlROS/src/rosjava_catkin_package_a/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
MySqlROS/src/rosjava_catkin_package_a/jdbc_connector_ros/src/main/java/com/github/rosjava_catkin_package_a/jdbc_connector_ros/: Listener.java
MySqlROS/src/rosjava_catkin_package_a/my_pub_sub_tutorial/: build.gradle
MySqlROS/src/rosjava_catkin_package_a/my_pub_sub_tutorial/msg/: package.xml
MySqlROS/src/rosjava_catkin_package_a/my_pub_sub_tutorial/src/main/java/com/github/rosjava_catkin_package_a/my_pub_sub_tutorial/: JDBC.java  Listener.java
MySqlROS/src/rosjava_catkin_package_a/rosjava_gradle_subprojekt_a/src/main/java/com/github/rosjava_catkin_package_a/rosjava_gradle_subprojekt_a/: Listener.java
Testbeskrivelser/: Forbindelsestest af system.odt  Præcisionstest - Billedbehandling - med resultater.odt  Præcisionstest - Billedbehandling.odt  Stresstest af billedbehandling.odt  Workspacetest .odt
cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cell_test_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
databse dump/: UR5_ExeTime.sql  UR5_PickUpLoc.sql  UR5_PickUpObject.sql  UR5_Throw.sql
kappers_pakke/: CMakeLists.txt  package.xml
kappers_pakker_support/: CMakeLists.txt  package.xml
throw_cell_moveit_config/: .setup_assistant
ur_manager/: CMakeLists.txt  package.xml
ur_manager_support/: CMakeLists.txt
(+498 files in other folders)
